# discord-rich-help.py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.rst  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  config.yml  feature_request.yaml
.github/workflows/: build.yaml  release.yaml  test.yaml
discord_rich_help/: __init__.py  help.py  text.py  ui.py
