[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "discord-rich-help.py"
authors = [
    {name = "PescadoGames", email = "official@pescadogames.com"},
]
maintainers = [
    {name = "Awayume", email = "dev@awayume.jp"},
]
description = "An extension which makes a rich-help command for discord.py"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["discord", "discord.py"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "discord.py>=2.2.2,<3.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-deprecated>=2.0.0,<3.0.0",
    "flake8-docstrings>=1.7.0,<2.0.0",
    "flake8-import-order>=0.18.2,<0.19.0",
    "flake8-print>=5.0.0,<6.0.0",
    "flake8-quotes>=3.3.2,<4.0.0",
    "pyproject-flake8>=6.0.0,<7.0.0",
    "mypy>=1.1.1,<2.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    "pytest>=7.2.2,<8.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
]
build = [
    "discord.py>=2.2.2,<3.0.0",
]

[project.urls]
Repository = "https://github.com/PescadoGames/discord-rich-help.py"
Documentation = "https://github.com/PescadoGames/discord-rich-help.py/wiki"
"Bug Tracker" = "https://github.com/PescadoGames/discord_rich_help.py/issues"

[tool.setuptools.packages.find]
include = ["discord_rich_help"]

[tool.setuptools.dynamic]
version = {attr = "discord_rich_help.__version__"}

#[tool.setuptools_scm]
#write_to = "discord_rich_help/_version.py"

[tool.flake8]
max-line-length = 125
extend-ignore = "D107,D400,W503"
max-complexity = 10

[tool.mypy]
implicit_reexport = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
